--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,11 @@ env:
   PROJECT_ID: ${{ secrets.GCE_PROJECT }}
   GCE_INSTANCE: strava-calendar-summary-web-service
   GCE_INSTANCE_ZONE: us-central1-a
+  IMAGE_NAME: strava-calendar-summary-web-service-image
 
 jobs:
   setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
+    name: Build, Publish, and Deploy to Google Compute Engine
     runs-on: ubuntu-latest
 
     permissions:
@@ -33,24 +34,23 @@ jobs:
       env:
         SECRET_PASSPHRASE: ${{ secrets.SECRET_PASSPHRASE }}
 
-    # Setup gcloud CLI
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
 
-    # Configure Docker to use the gcloud command-line tool as a credential
-    # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-    # Build the Docker image
+        gcloud auth configure-docker us-central1-docker.pkg.dev
+
     - name: Build
       run: |-
-        docker build --tag "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA" .
-    # Push the Docker image to Google Container Registry
+        docker build --tag "us-central1-docker.pkg.dev/$PROJECT_ID/strava-calendar-summary-web-service-container/$IMAGE_NAME:$GITHUB_SHA" .
+
     - name: Publish
       run: |-
-        docker push "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA"
+        docker push "us-central1-docker.pkg.dev/$PROJECT_ID/strava-calendar-summary-web-service-container/$IMAGE_NAME:$GITHUB_SHA"
+        
     - name: Deploy
       run: |-
         gcloud compute instances update-container "$GCE_INSTANCE" \
           --zone "$GCE_INSTANCE_ZONE" \
-          --container-image "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA"
+          --container-image "us-central1-docker.pkg.dev/$PROJECT_ID/strava-calendar-summary-web-service-container/$IMAGE_NAME:$GITHUB_SHA"
