Created oauth flow for Strava and Google sign in

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,50 @@
 anyio==3.5.0
+apiclient==1.0.4
+arrow==1.2.2
 asgiref==3.5.0
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.1.2
 fastapi==0.75.2
+google-api-core==2.7.2
+google-api-python-client==2.45.0
+google-auth==2.6.6
+google-auth-httplib2==0.1.0
+google-cloud-appengine-logging==1.1.1
+google-cloud-audit-log==0.2.0
+google-cloud-core==2.3.0
+google-cloud-firestore==2.4.0
+google-cloud-logging==3.0.0
+googleapis-common-protos==1.56.0
+grpc-google-iam-v1==0.12.4
+grpcio==1.44.0
+grpcio-status==1.44.0
 h11==0.13.0
+httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.11.3
+oauth2client==4.1.3
+packaging==21.3
+proto-plus==1.20.3
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pydantic==1.9.0
+pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
+strava-calendar-summary-data-access-layer==0.0.10
+strava-calendar-summary-utils==0.0.7
+stravalib==0.10.4
 typing-extensions==4.2.0
+units==0.7
+uritemplate==4.1.1
+urllib3==1.26.9
 uvicorn==0.17.6
 zipp==3.8.0
