--- a/requirements.txt
+++ b/requirements.txt
@@ -123,7 +123,8 @@ sniffio==1.2.0
 soupsieve==2.0.1
 spotdl==3.3.3
 spotipy==2.17.1
--e git+https://github.com/SebTota/StravaCalendarSummaryDataAccessLayer.git@88e3af1bec5c3c0483f08699d4703ec276d49ba6#egg=strava_calendar_summary_data_access_layer
+-e git+https://github.com/SebTota/StravaCalendarSummaryDataAccessLayer.git#egg=strava_calendar_summary_data_access_layer
+-e git+https://github.com/SebTota/StravaCalendarSummaryUtils.git#egg=strava_calendar_summary_utils
 stravalib==0.10.4
 tinydb==4.7.0
 tornado==6.1
