--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,50 @@
-aiobotocore==0.9.3
-aiohttp==3.3.2
-appdirs==1.4.3
-appnope==0.1.2
-argcomplete==1.12.3
+anyio==3.5.0
+apiclient==1.0.4
 arrow==1.2.2
-async-timeout==3.0.0
-attrs==19.1.0
-awscli==1.18.69
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.6.0
-botocore==1.16.19
-bs4==0.0.1
-cachelib==0.1.1
+asgiref==3.5.0
 cachetools==5.0.0
-certifi==2020.11.8
-cffi==1.14.3
-chardet==3.0.4
-click==7.1.2
-cloudevents==1.2.0
-colorama==0.4.3
-commonmark==0.9.1
-debugpy==1.5.0
-decorator==4.4.2
-deprecation==2.1.0
-distlib==0.3.4
-docopt==0.6.2
-docutils==0.14
-duolingo-api==0.5.4
-entrypoints==0.3
-filelock==3.6.0
-Flask==2.1.1
-Flask-Googletrans==0.11
-Flask-Session==0.3.2
-Flask-Sessions==0.1.5
-functions-framework==3.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.2
+fastapi==0.75.2
 google-api-core==2.7.2
+google-api-python-client==2.45.0
 google-auth==2.6.6
+google-auth-httplib2==0.1.0
 google-cloud-appengine-logging==1.1.1
 google-cloud-audit-log==0.2.0
 google-cloud-core==2.3.0
 google-cloud-firestore==2.4.0
 google-cloud-logging==3.0.0
 googleapis-common-protos==1.56.0
-googletrans==3.0.0
 grpc-google-iam-v1==0.12.4
 grpcio==1.44.0
 grpcio-status==1.44.0
-gunicorn==20.1.0
-h11==0.9.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2020.11.21
-httpcore==0.9.1
+h11==0.13.0
 httplib2==0.20.4
-httpx==0.13.3
-humanize==0.5.1
-hyperframe==5.2.0
-idna==2.7
-imageio==2.3.0
-importlib-metadata==4.8.1
-ipykernel==6.4.1
-ipython==7.28.0
-ipython-genutils==0.2.0
-itsdangerous==2.1.2
-jedi==0.18.0
-Jinja2==3.1.1
-jmespath==0.9.4
-jupyter-client==7.0.6
-jupyter-core==4.8.1
-lxml==4.3.3
-lyricsgenius==1.4.0
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
-moviepy==0.2.3.5
-multidict==4.5.2
-mutagen==1.41.0
-mysql-connector-python==8.0.22
-nest-asyncio==1.5.1
-notify2==0.3.1
-numpy==1.19.4
+idna==3.3
+importlib-metadata==4.11.3
 oauth2client==4.1.3
 packaging==21.3
-parso==0.8.2
-peewee==3.6.4
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==5.2.0
-pipreqs==0.4.11
-platformdirs==2.5.2
-prompt-toolkit==3.0.20
 proto-plus==1.20.3
 protobuf==3.20.1
-ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-pyee==5.0.0
-pygame==2.1.2
-Pygments==2.8.1
+pydantic==1.9.0
 pyparsing==3.0.8
-pyppeteer==0.0.25
-PyQt5==5.15.1
-PyQt5-sip==12.8.1
-PyQtWebEngine==5.15.1
 python-dateutil==2.8.2
-python-memcached==1.59
-python3-memcached==1.51
-pytube==9.5.1
 pytz==2022.1
-PyYAML==5.1b3
-pyzmq==22.3.0
-rapidfuzz==1.1.2
-redis==3.5.3
-requests==2.25.1
-rfc3986==1.4.0
-rich==9.13.0
-rsa==3.4.2
-s3transfer==0.3.3
-six==1.15.0
+requests==2.27.1
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
-soupsieve==2.0.1
-spotdl==3.3.3
-spotipy==2.17.1
+starlette==0.17.1
 -e git+https://github.com/SebTota/StravaCalendarSummaryDataAccessLayer.git#egg=strava_calendar_summary_data_access_layer
 -e git+https://github.com/SebTota/StravaCalendarSummaryUtils.git#egg=strava_calendar_summary_utils
 stravalib==0.10.4
-tinydb==4.7.0
-tornado==6.1
-tqdm==4.31.1
-traitlets==5.1.0
 typing-extensions==4.2.0
 units==0.7
-urllib3==1.26.3
-virtualenv==20.14.1
-watchdog==1.0.2
-wcwidth==0.2.5
-websockets==6.0
-Werkzeug==2.1.1
-wrapt==1.11.1
-yarg==0.1.9
-yarl==1.3.0
-youtube-dl==2020.11.21.1
-ytmusicapi==0.14.3
-zipp==3.6.0
+uritemplate==4.1.1
+urllib3==1.26.9
+uvicorn==0.17.6
+zipp==3.8.0
