--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ google-cloud-audit-log==0.2.0
 google-cloud-core==2.3.0
 google-cloud-firestore==2.4.0
 google-cloud-logging==3.0.0
+google-cloud-pubsub==2.12.0
 googleapis-common-protos==1.56.0
 grpc-google-iam-v1==0.12.4
 grpcio==1.44.0
