--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
 fastapi==0.75.2
+fastapi-sessions==0.3.2
 google-api-core==2.7.2
 google-api-python-client==2.45.0
 google-auth==2.6.6
 google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.1
 google-cloud-appengine-logging==1.1.1
 google-cloud-audit-log==0.2.0
 google-cloud-core==2.3.0
@@ -25,7 +27,9 @@ h11==0.13.0
 httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.11.3
+itsdangerous==2.1.2
 oauth2client==4.1.3
+oauthlib==3.2.0
 packaging==21.3
 proto-plus==1.20.3
 protobuf==3.20.1
@@ -36,6 +40,7 @@ pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
+requests-oauthlib==1.3.1
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
