--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ arrow==1.2.2
 asgiref==3.5.0
 cachetools==5.0.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.2
+cryptography==37.0.2
 fastapi==0.75.2
 fastapi-sessions==0.3.2
 google-api-core==2.7.2
@@ -35,7 +37,9 @@ proto-plus==1.20.3
 protobuf==3.20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
 pydantic==1.9.0
+PyJWT==2.4.0
 pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2022.1
@@ -48,7 +52,7 @@ starlette==0.17.1
 -e git+https://github.com/SebTota/StravaCalendarSummaryDataAccessLayer.git#egg=strava_calendar_summary_data_access_layer
 -e git+https://github.com/SebTota/StravaCalendarSummaryUtils.git#egg=strava_calendar_summary_utils
 stravalib==0.10.4
-typing-extensions==4.2.0
+typing_extensions==4.2.0
 units==0.7
 uritemplate==4.1.1
 urllib3==1.26.9
