Added tls to nginx

--- a/nginx/config.json
+++ b/nginx/config.json
@@ -3,6 +3,12 @@
     "listeners": {
         "*:80": {
             "pass": "routes"
+        },
+        "*:443": {
+            "pass": "routes",
+            "tls": {
+                "certificate": "bundle"
+            }
         }
     },
     "routes": [
