--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,12 +2,20 @@ anyio==3.5.0
 apiclient==1.0.4
 arrow==1.2.2
 asgiref==3.5.0
+cached-property==1.5.2
 cachetools==5.0.0
 certifi==2021.10.8
 cffi==1.15.0
+chardet==5.1.0
 charset-normalizer==2.0.12
 click==8.1.2
 cryptography==37.0.2
+cssselect==1.2.0
+cssutils==2.6.0
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==1.3.1
+emails==0.6
 fastapi==0.75.2
 fastapi-sessions==0.3.2
 google-api-core==2.7.2
@@ -22,6 +30,7 @@ google-cloud-firestore==2.4.0
 google-cloud-logging==3.0.0
 google-cloud-pubsub==2.12.0
 googleapis-common-protos==1.56.0
+greenlet==2.0.2
 grpc-google-iam-v1==0.12.4
 grpcio==1.44.0
 grpcio-status==1.44.0
@@ -29,12 +38,20 @@ h11==0.13.0
 httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.11.3
+inflection==0.5.1
 itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.2
+MarkupSafe==2.1.2
+mypy-extensions==1.0.0
 oauth2client==4.1.3
 oauthlib==3.2.0
 packaging==21.3
+passlib==1.7.4
+premailer==3.10.0
 proto-plus==1.20.3
 protobuf==3.20.1
+psycopg2-binary==2.9.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -42,17 +59,23 @@ pydantic==1.9.0
 PyJWT==2.4.0
 pyparsing==3.0.8
 python-dateutil==2.8.2
+python-jose==3.3.0
+python-multipart==0.0.6
 pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
+shortuuid==1.0.11
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==2.0.9
+sqlalchemy-orm==1.2.5
 starlette==0.17.1
--e git+https://github.com/SebTota/StravaCalendarSummaryDataAccessLayer#egg=strava_calendar_summary_data_access_layer
--e git+https://github.com/SebTota/StravaCalendarSummaryUtils#egg=strava_calendar_summary_utils
+-e git+https://github.com/SebTota/StravaCalendarSummaryDataAccessLayer@95f56ff9dae0e5732cde3f03292b4055e5fd41e5#egg=strava_calendar_summary_data_access_layer
+-e git+https://github.com/SebTota/StravaCalendarSummaryUtils@0d44d5c5ff3bfae243aca805075da1dc6eb0c79f#egg=strava_calendar_summary_utils
 stravalib==0.10.4
-typing_extensions==4.2.0
+typing-extensions==4.2.0
+typing-inspect==0.8.0
 units==0.7
 uritemplate==4.1.1
 urllib3==1.26.9
