--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -32,7 +32,7 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - ./backend:/app
+      - ./backend:/backend
     environment:
       - SERVER_HOST=http://${DOMAIN?Variable not set}
     build:
