Beginning SQLModel migration with CalendarEvent models.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,12 +23,6 @@ google-api-python-client==2.45.0
 google-auth==2.6.6
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
-google-cloud-appengine-logging==1.1.1
-google-cloud-audit-log==0.2.0
-google-cloud-core==2.3.0
-google-cloud-firestore==2.4.0
-google-cloud-logging==3.0.0
-google-cloud-pubsub==2.12.0
 googleapis-common-protos==1.56.0
 greenlet==2.0.2
 grpc-google-iam-v1==0.12.4
@@ -68,12 +62,14 @@ rsa==4.8
 shortuuid==1.0.11
 six==1.16.0
 sniffio==1.2.0
-SQLAlchemy==2.0.9
+SQLAlchemy==1.4.41
 sqlalchemy-orm==1.2.5
+sqlalchemy2-stubs==0.0.2a34
+sqlmodel==0.0.8
 starlette==0.17.1
 stravalib==0.10.4
-typing-extensions==4.2.0
 typing-inspect==0.8.0
+typing_extensions==4.2.0
 units==0.7
 uritemplate==4.1.1
 urllib3==1.26.15
