--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
