--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -48,6 +48,9 @@ services:
   frontend:
     volumes:
       - ./frontend:/frontend
+      - /frontend/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     build:
       context: ./frontend
       dockerfile: frontend.dockerfile
